--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta name="renderer" content="webkit" />
     <meta name="description" content="lambert" />
     <meta name="keywords" content="NFT,lambert" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/png" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/png" />
     <title>lambert</title>
   </head>
   <body>
